[package]
name = "tree"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
is-terminal = "0.4.17"
jwalk = "0.8.1"
lscolors = "0.21.0"
tikv-jemallocator = "0.6.1"
url = "2.5.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
