[package]
name = "tree"
version = "0.2.1"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
is-terminal = "0.4.17"
jwalk = "0.8.1"
lscolors = "0.21.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
tikv-jemallocator = "0.6.1"
url = "2.5.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
